Add documentation for service with query params
