# CoffeeShop/CoffeeShop.API/Controllers/CashierController.cs
@@ -1,6 +1,8 @@
 ﻿using CoffeeShop.API.Models;
 using CoffeeShop.Cashier.bo;
 using CoffeeShop.Cashier.model;
+using CoffeeShop.Menu.bo;
+using CoffeeShop.Menu.model;
 using System;
 using System.Collections;
 using System.Collections.Generic;
@@ -13,21 +15,29 @@ namespace CoffeeShop.API.Controllers
 {
     public class CashierController : ApiController
     {
-        CashierBo Cashier;
+        private MenuBo menu;
+        private CashierBo Cashier;
 
         public CashierController()
         {
+            menu = new MenuBo();
             Cashier = new CashierBo();
         }
 
-        private Item GetConcept(string ItemKey, ICollection<Item> Options )
+        private Item GetConcept(string itemKey, ICollection<Item> options )
         {
+            MenuItem selectedItem = menu.GetItem(itemKey);
+            if (selectedItem == null)
+            {
+                throw new HttpResponseException(new HttpResponseMessage(HttpStatusCode.NotFound));
+            }
+
             string ItemOption = null;
             Dictionary<String, String> RecipeOptions = new Dictionary<String, String>();
 
-            if (Options != null)
+            if (options != null)
             {
-                foreach (var QueryValue in Options)
+                foreach (var QueryValue in options)
                 {
                     if (QueryValue.Key == "option")
                     {
@@ -43,32 +53,32 @@ namespace CoffeeShop.API.Controllers
                 }
             }
 
-            Concept concept = Cashier.CalcConcept(ItemKey, ItemOption, RecipeOptions);
+            Concept concept = Cashier.CalcConcept(selectedItem, ItemOption, RecipeOptions);
             return new Item { Value = concept.Name, Concept = concept.Total };
         }
 
         [AcceptVerbs(WebRequestMethods.Http.Get)]
-        [Route("api/cashier/pricing/{ItemKey}")]
-        public Item GetItemPricing(string ItemKey)
+        [Route("api/cashier/pricing/{itemKey}")]
+        public Item GetItemPricing(string itemKey)
         {
-            List<Item> QueryItems = (from pair in this.Request.GetQueryNameValuePairs()
+            List<Item> queryItems = (from pair in this.Request.GetQueryNameValuePairs()
                                     select new Item { Key = pair.Key, Value = pair.Value }).ToList();
 
-            return GetConcept(ItemKey, QueryItems);
+            return GetConcept(itemKey, queryItems);
         }
 
         [AcceptVerbs(WebRequestMethods.Http.Post)]
         [Route("api/cashier/bill")]
-        public List<Item> GetItemsBill([FromBody] List<Item> MenuItems)
+        public List<Item> GetItemsBill([FromBody] List<Item> menuItems)
         {
-            List<Item> Bill = new List<Item>();
+            List<Item> bill = new List<Item>();
             
-            foreach(Item SelectedMenuItem in MenuItems)
+            foreach(Item selectedMenuItem in menuItems)
             {
-                Bill.Add(GetConcept(SelectedMenuItem.Key, SelectedMenuItem.Children));
+                bill.Add(GetConcept(selectedMenuItem.Key, selectedMenuItem.Children));
             }
 
-            return Bill;
+            return bill;
         }
     }
 }
